Digital Guardian ARC(PAPP-10070): Made the key order consistent added license and removed doc reference

--- a/readme.html
+++ b/readme.html
@@ -1,11 +1,7 @@
-<p>
-  This App is an Ingestion source. In the Phantom documentation, in the
-  <a href="../admin/">Administration Manual</a> under the
-  <a href="../admin/sources">Data Sources</a> section, you will find an
-  explanation of how Ingest Apps works and how information is extracted from the
-  ingested data. There is a general explanation in Overview, and some
-  individuals Apps have their own sections.
-</p>
+<!-- File: readme.html
+
+  Licensed under Apache 2.0 (https://www.apache.org/licenses/LICENSE-2.0.txt)
+-->
 
 <p><b>Notes</b></p>
 <ul>
